# Smart-Home

./: .gitmodules  CMakeLists.txt  Config.h  Config.h.in  Device.hpp  DevicesContainer.cpp  DevicesContainer.hpp  DevicesContainerInterfaces.hpp  Example.cpp  Example.hpp  NetworkInterfaces.hpp  run_tests.sh
CentralUnit/: CMakeLists.txt
CentralUnit/include/: Action.cpp  Action.hpp  CurrentLocation.hpp  Device.cpp  Device.hpp  DigitalSensor.hpp  IrrigationSystem.hpp  Location.cpp  Location.hpp  NetworkDeviceForLinux.hpp  NetworkInterface.hpp  SH_Device.hpp  SH_DigitalSensor.hpp  SH_IrrigationSystem.hpp  SH_Location.hpp  SH_NetworkDeviceForWindows.hpp  SH_NetworkInterface.hpp  SH_System.hpp  System.hpp
CentralUnit/include/experimental/: SH_CurrentLocation.hpp  SH_FolderLike.hpp
CentralUnit/lib/: SH_Action.cpp  SH_Device.cpp  SH_Location.cpp  SH_System.cpp  SH_lib.cpp  main.cpp
CentralUnit/test/: test_Device.hpp
include/CentralUnit/BusinesLayer/: ComponentsTree.hpp  Device.hpp  DevicesContainer.hpp  DevicesContainerInterfaces.hpp  DevicesManager.hpp
include/CentralUnit/Interfaces/: AppInterfaces.hpp  BasicDefinitions.hpp  Device.hpp  Directory.hpp  NetworkInterfaces.hpp
scripts/: run_tests.sh
src/: CMakeLists.txt  ComponentsTree.cpp  DevicesContainer.cpp  DevicesManager.cpp  Directory.cpp
tests/: CMakeLists.txt  CentralUnitTest.cpp  test.cpp
